--- a/view/about/about.html
+++ b/view/about/about.html
@@ -16,12 +16,12 @@
     <div class="topnav">
       <div class="logo">
         <img src="../../src/images/logo5.png" alt="Logo" width="270px">
-    </div>
+      </div>
       <ul class="subtop">
         <li><a href="../gallerypage/gallerypage.html">GALLERY</a></li>
         <li><a href="../servicepage/service.html">SERVICES</a></li>
         <li><a href="../contacts/contacts.html">CONTACTS</a></li>
-        <li><a href="../about/about.html">ABOUT</a></li>
+        <li class="active"><a href="../about/about.html">ABOUT</a></li>
         <li><a href="../homepage/home.html">HOME</a></li>
       </ul>
     </div>
@@ -34,49 +34,59 @@
     </div>
     <div class="para">
       <p>
-        zuxcash is an Aveda Concept Salon located in Uptown Charlotte. All of our valued customers receive free parking.
         Our mission is to provide the highest quality service, in union with the highest quality products for the well
         being of our guests and the environment.
-        zuxcash is an Aveda Concept Salon located in Uptown Charlotte. All of our valued customers receive free parking.
+        zuxmoney is an Best Salon located in Gongo la mboto, near Kampala university.
+        Add a description of the image here, Add a description of the image hereAdd a
+        description of the image here
+
+      </p>
+      <p>
         Our mission is to provide the highest quality service, in union with the highest quality products for the well
         being of our guests and the environment.
-        zuxcash is an Aveda Concept Salon located in Uptown Charlotte. All of our valued customers receive free parking.
-        
+        zuxmoney is an Best Salon located in Gongo la mboto, near Kampala university.
+        Add a description of the image here, Add a description of the image hereAdd a
+        description of the image here
+
       </p>
     </div>
+  </div>
   </div>
 
   <div class="footer">
     <div class="socialicons">
-        <a href="#" class="fa fa-instagram"></a>
-        <a href="#" class="fa fa-facebook"></a>
-        <a href="#" class="fa fa-telegram"></a>
-        <a href="#" class="fa fa-twitter"></a>
-        <a href="#" class="fa fa-whatsapp"></a>
+      <a href="#" class="fa fa-instagram"></a>
+      <a href="#" class="fa fa-facebook"></a>
+      <a href="#" class="fa fa-telegram"></a>
+      <a href="#" class="fa fa-twitter"></a>
+      <a href="#" class="fa fa-whatsapp"></a>
+      <div class="tik">
+        <a href="#"><img src="../../src/images/tkicon4.png" alt="tiktok"></a>
+      </div>
     </div>
 
 
 
     <div class="row">
-        <div class="column1">
-            <h3>Hours</h3>
-            <p>Mon-Fri:&nbsp; &nbsp;&nbsp;&nbsp; 8:00am-10:00pm<br>
-                Sat:&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;  9:00am-7:00pm<br>
-                Sun:&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;  12:00am-7:00pm</p>
-        </div>
+      <div class="column1">
+        <h3>Hours</h3>
+        <p>Mon-Fri:&nbsp; &nbsp;&nbsp;&nbsp; 8:00am-10:00pm<br>
+          Sat:&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; 9:00am-7:00pm<br>
+          Sun:&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp; 12:00am-7:00pm</p>
+      </div>
 
-        <div class="column2">
-            <h3>Location</h3>
-            <p>Gongo la mboto, Dar es salaam, Tanzania<br>Nyerere road, Kampala road </p>
-        </div>
+      <div class="column2">
+        <h3>Location</h3>
+        <p>Gongo la mboto, Dar es salaam, Tanzania<br>Nyerere road, Kampala road </p>
+      </div>
 
-        <div class="column3">
-            <h3>Contacts</h3>
-            <p>Phone:&nbsp; &nbsp; &nbsp;&nbsp; +255764730547<br>Email:&nbsp; &nbsp; &nbsp;&nbsp; zux@gmail.com
-            <p>
-        </div>
+      <div class="column3">
+        <h3>Contacts</h3>
+        <p>Phone:&nbsp; &nbsp; &nbsp;&nbsp; +255764730547<br>Email:&nbsp; &nbsp; &nbsp;&nbsp; zux@gmail.com
+        <p>
+      </div>
     </div>
-</div>
+  </div>
 
 </body>
 
