--- a/view/gallerypage/gallerypage.html
+++ b/view/gallerypage/gallerypage.html
@@ -19,7 +19,7 @@
       </div>
       <div class="subtop">
         <ul>
-          <li><a href="../gallerypage/gallerypage.html">GALLERY</a></li>
+          <li  class="active"><a href="../gallerypage/gallerypage.html">GALLERY</a></li>
           <li><a href="../servicepage/service.html">SERVICES</a></li>
           <li><a href="../contacts/contacts.html">CONTACTS</a></li>
           <li><a href="../about/about.html">ABOUT</a></li>
@@ -71,6 +71,9 @@
       <a href="#" class="fa fa-telegram"></a>
       <a href="#" class="fa fa-twitter"></a>
       <a href="#" class="fa fa-whatsapp"></a>
+      <div class="tik">
+        <a href="#"><img src="../../src/images/tkicon4.png" alt="tiktok"></a>
+    </div>
     </div>
 
 
