--- a/view/homepage/home.html
+++ b/view/homepage/home.html
@@ -23,7 +23,7 @@
                 <li><a href="../servicepage/service.html">SERVICES</a></li>
                 <li><a href="../contacts/contacts.html">CONTACTS</a></li>
                 <li><a href="../about/about.html">ABOUT</a></li>
-                <li><a href="../homepage/home.html">HOME</a></li>
+                <li class="active"><a href="../homepage/home.html">HOME</a></li>
             </ul>
 
         </div>
@@ -47,7 +47,9 @@
                         description of the image here</div>
                 </div>
 
-
+                <div class="hr">
+                    <hr>
+                </div>
 
 
                 <div class="servigallery2 ">
@@ -59,7 +61,9 @@
                         description of the image here</div>
                 </div>
 
-
+                <div class="hr">
+                    <hr>
+                </div>
 
                 <div class="servigallery3 ">
                     <a target="_blank" href="../../src/images/pic3.jpg">
@@ -69,7 +73,9 @@
                     <div class="desc">Add a description of the image here, Add a description of the image hereAdd a
                         description of the image here</div>
                 </div>
-
+                <div class="hr">
+                    <hr>
+                </div>
 
             </div>
 
@@ -98,6 +104,9 @@
                     <div class="desc">Add a description of the image here, Add a description of the image hereAdd a
                         description of the image here</div>
                 </div>
+                <div class="hr">
+                <hr>
+                </div>
                 <div class="offgallery2">
                     <a target="_blank" href="../../src/images/pic2.jpg">
                         <img src="../../src/images/pic2.jpg" alt="Forest" width="600" height="400">
@@ -106,6 +115,9 @@
                     <div class="desc">Add a description of the image hereAdd a description of the image here, Add a
                         description of the image here</div>
                 </div>
+                <div class="hr">
+                    <hr>
+                </div>
                 <div class="offgallery3">
                     <a target="_blank" href="../../src/images/pic3.jpg">
                         <img src="../../src/images/pic3.jpg" alt="Northern Lights" width="600" height="400">
@@ -113,6 +125,9 @@
                     <p><span>DISCOUNT</span> ON SERVICES</p>
                     <div class="desc">Add a description of the image here, Add a description of the image hereAdd a
                         description of the image here</div>
+                </div>
+                <div class="hr">
+                    <hr>
                 </div>
             </div>
 
@@ -126,6 +141,10 @@
             <a href="#" class="fa fa-telegram"></a>
             <a href="#" class="fa fa-twitter"></a>
             <a href="#" class="fa fa-whatsapp"></a>
+            <div class="tik">
+                <a href="#"><img src="../../src/images/tkicon4.png" alt="tiktok"></a>
+            </div>
+            
         </div>
 
 
