--- a/view/contacts/contacts.css
+++ b/view/contacts/contacts.css
@@ -1,13 +1,21 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;700&display=swap");
 body {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  /* background-color: rgb(0, 0, 0); */
+  /* font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif; */
+  font-family: "Poppins", sans-serif;
+  background-color: rgb(0, 0, 0);
 }
-
+* {
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
 :root {
   --golden: rgb(230, 212, 14);
 }
-
+.active{
+  border-bottom: 3px solid var(--golden);
+  padding-bottom: 3px;
+}
 .topnav {
   position: relative;
   top: 0;
@@ -15,24 +23,21 @@ body {
   /* padding-left: 2%; */
   width: 100%;
 }
-.topnav ul {
+.subtop {
+  /* background-color: purple; */
+  float: left;
+  width: 60%;
   list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  /* background-color: #333; */
-  /* border-radius: 2px; */
-  width: 100;
+  margin-top: 2%;
 }
-
-.topnav li {
+.subtop li {
   float: right;
   /* display: inline; */
   margin-top: 3%;
   margin-right: 2%;
 }
 
-.topnav li a {
+.subtop li a {
   display: block;
   color: white;
   text-align: center;
@@ -40,12 +45,26 @@ body {
   text-decoration: none;
   font-size: 150%;
   float: left;
+  position: relative;
 }
-
-.topnav li a:hover {
+.subtop li a:after {
+  content: "";
+  display: block;
+  width: 0;
+  height: 2px;
+  transition: width 0.3s ease-in-out;
+  position: absolute;
+  bottom: -5px;
+  left: 0;
   background-color: var(--golden);
 }
 
+.subtop a:hover:after {
+  width: 100%;
+}
+.hr{
+  display: none;
+}
 .logo {
   float: left;
   display: block;
@@ -55,6 +74,7 @@ body {
   text-decoration: none;
   margin-right: 200px;
   font-size: 150%;
+  margin-top: 2%;
 }
 
 .backimage {
@@ -65,7 +85,7 @@ body {
   top: 0;
   /* animation: change 30s infinite ease-in-out; */
 }
-@keyframes change {
+/* @keyframes change {
   0% {
     background-image: url(../../src/images/pic2.jpg);
   }
@@ -84,46 +104,65 @@ body {
   100% {
     background-image: url(../../src/images/pic3.jpg);
   }
+} */
+
+/* form and contacts */
+.rowform {
+  /* background-color: chocolate; */
 }
-
-
+.contact {
+  /* background-color: red; */
+  display: grid;
+  place-items: center;
+  align-content: center;
+}
 .contact .head p {
   font-size: 40px;
   text-align: center;
+  color: white;
 }
 
 .contact .head p span {
   color: var(--golden);
 }
-
+.head {
+  /* background-color: purple; */
+}
 .address {
   height: 300px;
-  width: 30%;
-  margin-left: 10%; 
+  width: 35%;
+  margin-right: 5%;
   margin-top: 5%;
-  /* background-color: red; */
+  /* background-color: orange; */
   font-size: 150%;
   float: left;
-  
-  
+  color: white;
+  border-left: 3px solid var(--golden);
+  border-top-left-radius: 20%;
+  padding-left: 2%;
+  padding-top: 1%;
+
 }
 
 /* form */
 
-.formspace{
+.formspace {
   /* background-color: blue; */
   width: 60%;
-  float: right;
-
-  
+  float: left;
+  color: white;
 }
 
-.formspace p{
+.formspace p {
   font-size: 20px;
   text-align: left;
-  margin-left: 10%;
+  /* margin-left: 10%; */
 }
-input[type=text], select, textarea {
+
+input[type="text"],
+input[type="email"],
+select,
+textarea {
   width: 100%;
   padding: 12px;
   border: 3px solid var(--golden);
@@ -132,14 +171,9 @@ input[type=text], select, textarea {
   font-size: 20px;
 }
 
-label {
-  padding: 12px 12px 12px 0;
-  display: inline-block;
-}
-
-input[type=submit] {
-  background-color: black;
-  color:  white;
+input[type="submit"] {
+  background-color: white;
+  color: black;
   padding: 12px 20px;
   border: none;
   border-radius: 4px;
@@ -148,17 +182,14 @@ input[type=submit] {
   font-weight: 700;
 }
 
-input[type=submit]:hover {
+input[type="submit"]:hover {
   background-color: var(--golden);
 }
 
 .container {
-  border-radius: 5px;
-  padding-top: 0%;
-  padding-left: 10%;
-  box-sizing: border-box;
+  /* background-color: aqua; */
 }
-
+/*
 .col-25 {
   float: left;
   width: 25%;
@@ -169,8 +200,75 @@ input[type=submit]:hover {
   float: left;
   width: 75%;
   margin-top: 6px;
+} */
+
+/* Clear floats after the columns */
+.contactcont:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+.contactcont {
+  /* background-color: green; */
+  width: 89%;
 }
 
+/* form and contacts ends*/
+
+/* footer starts here */
+
+.footer {
+  background-color: #252323;
+  padding: 15px;
+  /* text-align: center; */
+  height: 300%;
+  color: white;
+  margin-top: 2%;
+  /* padding-left: 15%; */
+  display: grid;
+  place-items: center;
+}
+
+.row h3 {
+  color: var(--golden);
+  text-align: center;
+}
+.row p {
+  font-size: 120%;
+}
+.row {
+  /* background-color: purple; */
+  width: 98%;
+}
+
+/* Create three equal columns that floats next to each other */
+.column1 {
+  float: left;
+  width: 32%;
+  /* background-color: red; */
+  /* padding: 15px; */
+  /* margin-right: 2%; */
+  display: grid;
+  place-items: center;
+}
+.column2 {
+  float: left;
+  width: 32%;
+  /* background-color: yellow; */
+  /* padding: 15px; */
+  /* margin-right: 2%; */
+  display: grid;
+  place-items: center;
+}
+.column3 {
+  float: left;
+  width: 32%;
+  /* background-color: pink; */
+  /* padding: 15px; */
+  /* margin-right: 2%; */
+  display: grid;
+  place-items: center;
+}
 /* Clear floats after the columns */
 .row:after {
   content: "";
@@ -178,89 +276,170 @@ input[type=submit]:hover {
   clear: both;
 }
 
-/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 600px) {
-  .col-25, .col-75, input[type=submit] {
-    width: 100%;
-    margin-top: 0;
-  }
-}
-
-/* footer starts here */
-
-.footer {
-  background-color: #252323;
-  padding: 15px;
-  text-align: center;
-  height: 300%;
-  color: aliceblue;
-  margin-top: 40%;
-}
-
-.rowf .columnf h2 {
-  color: var(--golden);
-}
-.rowf .columnf p {
-  font-size: 120%;
-}
-/* Create three equal columns that floats next to each other */
-.columnf {
-  float: left;
-  width: 29%;
-  padding: 15px;
-  margin-right: 2%;
-}
-
-/* Clear floats after the columns */
-.rowf:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 600px) {
-  .columnf {
-    width: 100%;
-  }
-}
-
 /* social media icons */
 .fa {
-  padding: 10px;
+  /* padding: 10px; */
   font-size: 25px;
-  width: 25px;
+  width: 86px;
   height: 25px;
   text-align: center;
   text-decoration: none;
   margin: 4px 1px;
   border-radius: 50%;
 }
+.tik{
+  /* background-color: blue; */
+  float: left;
+  margin-right: 4px;
+  margin-top: 5px;
+}
+.socialicons img{
+  font-size: 25px;
+  height: 25px;
+  background-color: var(--golden);
+  border-radius: 50%;
+  text-align: center;
+  color: var(--golden);
+  /* margin: 4px 1px; */
+}
+
+.socialicons {
+  /* background-color: green; */
+}
 
 .fa:hover {
   opacity: 0.7;
 }
 .fa-instagram {
-  background: rgb(173, 25, 165);
-  color: white;
+  /* background:  rgb(173, 25, 165); */
+  color: var(--golden);
 }
 
 .fa-facebook {
-  background: #3b5998;
-  color: white;
+  /* background: #3B5998; */
+  color: var(--golden);
 }
 
 .fa-telegram {
-  background: #3888a8;
-  color: white;
+  /* background: #3888a8; */
+  color: var(--golden);
 }
 
 .fa-twitter {
-  background: #55acee;
-  color: white;
+  /* background: #55ACEE; */
+  color: var(--golden);
 }
 
 .fa-whatsapp {
-  background: #12be29;
-  color: white;
+  /* background: #12be29; */
+  color: var(--golden);
+}
+
+/* responsiveness */
+@media only screen and (max-width: 600px) {
+  .hr{
+    display: block;
+    width: 85.33%;
+    /* background-color: red; */
+    margin-top: 2%;
+    margin-bottom: 2%;
+  }
+  .hr hr{
+    
+    width: 50%;
+  }
+  
+  .active{
+    border-bottom: none;
+    border-left: 10px solid var(--golden);
+    padding-bottom: 3px;
+    border-radius: 50%
+    
+  }
+  .contactcont {
+    display: grid;
+    place-items: center;
+    align-content: center;
+    
+  }
+  .address {
+    
+    width: 100%;
+    margin-right: 0%;
+    margin-top: 0%;
+   /* background-color: red; */
+    font-size: 150%;
+  }
+  .formspace {
+    
+    margin-top: 3%;
+    /* background-color: blue; */
+    width: 100%;
+    /* float: left; */
+    color: white;
+  }
+  .contact{
+    width: 100%;
+  }
+  
+  
+  .subtop {
+    float: left;
+    width: 40%;
+    list-style-type: none;
+    margin-top: 2%;
+    transform: rotate(180deg);
+  }
+  .subtop li {
+    float: right;
+    display: inline;
+    margin-top: 3%;
+    margin-right: 22%;
+    margin-left: 0%;
+  }
+  .subtop li a {
+    display: block;
+    color: white;
+    padding: 8px 16px;
+    text-decoration: none;
+  }
+  .topnav ul > li {
+    transform: rotate(-180deg);
+  }
+  .logo {
+    margin-left: 2%;
+  }
+  .backimage {
+    /* height: 400px; */
+    height: 450px;
+  }
+
+  /*
+  .footer {
+    margin-top: 2%;
+    padding-left: 1%;
+    width: 338px;
+    height: 600px;
+  } */
+
+  .row {
+    display: grid;
+    place-items: center;
+    align-content: center;
+  }
+
+  .column1 {
+    width: 90%;
+  }
+  .column2 {
+    width: 90%;
+  }
+  .column3 {
+    width: 90%;
+  }
+  .fa {
+    /* padding: 10px; */
+    font-size: 25px;
+    width: 50px;
+  }
 }
