--- a/view/contacts/contacts.html
+++ b/view/contacts/contacts.html
@@ -14,112 +14,135 @@
 <body>
   <div class="backimage">
     <div class="topnav">
-      <ul>
-        <li class="logo" style="float: left; margin-top: 2%;" ><img src="../../src/images/logo5.png" alt="Logo" width="270px" ></li>
+      <div class="logo">
+        <img src="../../src/images/logo5.png" alt="Logo" width="270px">
+      </div>
+      <ul class="subtop">
         <li><a href="../gallerypage/gallerypage.html">GALLERY</a></li>
         <li><a href="../servicepage/service.html">SERVICES</a></li>
-        <li><a href="../contacts/contacts.html">CONTACTS</a></li>
+        <li  class="active"><a href="../contacts/contacts.html">CONTACTS</a></li>
         <li><a href="../about/about.html">ABOUT</a></li>
         <li><a href="../homepage/home.html">HOME</a></li>
       </ul>
     </div>
   </div>
-
   <div class="contact">
+
     <div class="head">
       <p>
         <span>Contact</span> Us
       </p>
     </div>
-    <div class="address">
-      <table>
-        <tr>
-          <td>Gongo la mboto, DaresSalaam, Tanzania</td>
-        </tr>
-        <tr>
-          <td>
-            Nyerere Road, Kampala Road
-          </td>
-        </tr>
-        <tr>
-          <td>
-            zuxmoney@gmail.com
-          </td>
-        </tr>
-        <tr>
-          <td>
-            Tel: +255677855543 <br>
-            Tel: +255677855543
-          </td>
-        </tr>
-        <tr>
-          <td>
-            Follow us on socia media
-          </td>
-        </tr>
-      </table>
-    </div>
-    <div class="formspace">
-      <p>Get in touch with us</p>
-      <div class="container">
-        <form action="">
-          <div class="row">
-            <div class="col-75">
-              <input type="text" id="fname" name="firstname" placeholder="Your name..">
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-75">
-              <input type="text" id="lname" name="lastname" placeholder="Your last name..">
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-75">
-              <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
-            </div>
-          </div>
-          <br>
-          <div class="row">
-            <input type="submit" value="Submit">
-          </div>
-        </form>
+    <!-- <hr class="hr1"> -->
+    <div class="contactcont">
+      <div class="address">
+        <table>
+          <tr>
+            <td>Gongo la mboto, DaresSalaam, Tanzania</td>
+          </tr>
+          <tr>
+            <td>
+              Nyerere Road, Kampala Road
+            </td>
+          </tr>
+          <tr>
+            <td>
+              zuxmoney@gmail.com
+            </td>
+          </tr>
+          <tr>
+            <td>
+              Tel: +255677855543 <br>
+              Tel: +255677855543
+            </td>
+          </tr>
+          <tr>
+            <td>
+              Follow us on socia media
+            </td>
+          </tr>
+        </table>
       </div>
-
+      <div class="hr">
+        <hr>
     </div>
+      <div class="formspace">
+        <p>Get in touch with us</p>
+        <div class="container">
+          <form action="https://formsubmit.co/chrispiansilvano73@gmail.com" method="post"> 
+            <!-- here I have user formsubmit.co from  "https://formsubmit.co/" -->
+            <!-- <input type="hidden" name="_next" value="https://yourdomain.co/thanks.html"> -->
+            <input type="hidden" name="_captcha" value="false">
+            <input type="hidden" name="_cc" value="chrispiansilvano282@email.com">
+            <table style="width: 100%;">
+              <tr>
+                <td>Name:
+                  <input type="text" name="name" id="name">
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  Email:
+                  <input type="email" name="email" id="email">
+                </td>
+              </tr>
+              <tr>
+                <td>
+
+                  <textarea id="subject" name="subject" placeholder="Write something.."
+                    style="height:150px;"></textarea>
+                </td>
+              </tr>
+
+              <tr>
+                <td>
+                  <input type="submit" value="submit">
+                </td>
+              </tr>
+            </table>
+          </form>
+        </div>
+
+      </div>
+    </div>
+
+
   </div>
-
-
-
   <div class="footer">
+    <div class="socialicons">
+      <a href="#" class="fa fa-instagram"></a>
+      <a href="#" class="fa fa-facebook"></a>
+      <a href="#" class="fa fa-telegram"></a>
+      <a href="#" class="fa fa-twitter"></a>
+      <a href="#" class="fa fa-whatsapp"></a>
+      <div class="tik">
+        <a href="#"><img src="../../src/images/tkicon4.png" alt="tiktok"></a>
+    </div>
+    </div>
 
-    <a href="#" class="fa fa-instagram"></a>
-    <a href="#" class="fa fa-facebook"></a>
 
-    <a href="#" class="fa fa-telegram"></a>
-    <a href="#" class="fa fa-twitter"></a>
-    <a href="#" class="fa fa-whatsapp"></a>
 
-    <div class="rowf">
-      <div class="columnf">
-        <h2>Hours</h2>
-        <p>Monday-Friday:&nbsp; &nbsp;&nbsp;&nbsp; 8:00am-10:00pm<br>
-          Saturday:&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; 9:00am-7:00pm<br>
-          Sunday:&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;&nbsp; 12:00am-7:00pm</p>
+    <div class="row">
+      <div class="column1">
+        <h3>Hours</h3>
+        <p>Mon-Fri:&nbsp; &nbsp;&nbsp;&nbsp; 8:00am-10:00pm<br>
+          Sat:&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; 9:00am-7:00pm<br>
+          Sun:&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp; 12:00am-7:00pm</p>
       </div>
 
-      <div class="columnf">
-        <h2>Location</h2>
+      <div class="column2">
+        <h3>Location</h3>
         <p>Gongo la mboto, Dar es salaam, Tanzania<br>Nyerere road, Kampala road </p>
       </div>
 
-      <div class="columnf">
-        <h2>Contacts</h2>
+      <div class="column3">
+        <h3>Contacts</h3>
         <p>Phone:&nbsp; &nbsp; &nbsp;&nbsp; +255764730547<br>Email:&nbsp; &nbsp; &nbsp;&nbsp; zux@gmail.com
         <p>
       </div>
     </div>
   </div>
 
-</body>
+</body> 
 
 </html>
