--- a/view/servicepage/service.html
+++ b/view/servicepage/service.html
@@ -20,7 +20,7 @@
             <div class="subtop">
                 <ul>
                     <li><a href="../gallerypage/gallerypage.html">GALLERY</a></li>
-                    <li><a href="../servicepage/service.html">SERVICES</a></li>
+                    <li  class="active"><a href="../servicepage/service.html">SERVICES</a></li>
                     <li><a href="../contacts/contacts.html">CONTACTS</a></li>
                     <li><a href="../about/about.html">ABOUT</a></li>
                     <li><a href="../homepage/home.html">HOME</a></li>
@@ -48,7 +48,9 @@
                         description of the image here</div>
                 </div>
 
-
+                <div class="hr">
+                    <hr>
+                </div>
 
 
                 <div class="servigallery2 ">
@@ -60,7 +62,9 @@
                         description of the image here</div>
                 </div>
 
-
+                <div class="hr">
+                    <hr>
+                </div>
 
                 <div class="servigallery3 ">
                     <a target="_blank" href="../../src/images/pic3.jpg">
@@ -70,7 +74,9 @@
                     <div class="desc">Add a description of the image here, Add a description of the image hereAdd a
                         description of the image here</div>
                 </div>
-
+                <div class="hr">
+                    <hr>
+                </div>
 
             </div>
 
@@ -92,6 +98,10 @@
                     <div class="desc">Add a description of the image here, Add a description of the image hereAdd a
                         description of the image here</div>
                 </div>
+
+                <div class="hr">
+                    <hr>
+                </div>               
                 <div class="offgallery2">
                     <a target="_blank" href="../../src/images/pic2.jpg">
                         <img src="../../src/images/pic2.jpg" alt="Forest" width="600" height="400">
@@ -100,6 +110,9 @@
                     <div class="desc">Add a description of the image hereAdd a description of the image here, Add a
                         description of the image here</div>
                 </div>
+                <div class="hr">
+                    <hr>
+                </div>
                 <div class="offgallery3">
                     <a target="_blank" href="../../src/images/pic3.jpg">
                         <img src="../../src/images/pic3.jpg" alt="Northern Lights" width="600" height="400">
@@ -107,6 +120,9 @@
                     <p><span>DISCOUNT</span> ON SERVICES</p>
                     <div class="desc">Add a description of the image here, Add a description of the image hereAdd a
                         description of the image here</div>
+                </div>
+                <div class="hr">
+                    <hr>
                 </div>
             </div>
 
@@ -128,6 +144,9 @@
                     <div class="desc">Add a description of the image here, Add a description of the image hereAdd a
                         description of the image here</div>
                 </div>
+                <div class="hr">
+                    <hr>
+                </div>
                 <div class="nailgallery2">
                     <a target="_blank" href="../../src/images/pic2.jpg">
                         <img src="../../src/images/pic2.jpg" alt="Forest" width="600" height="400">
@@ -136,6 +155,9 @@
                     <div class="desc">Add a description of the image hereAdd a description of the image here, Add a
                         description of the image here</div>
                 </div>
+                <div class="hr">
+                    <hr>
+                </div>
                 <div class="nailgallery3">
                     <a target="_blank" href="../../src/images/pic3.jpg">
                         <img src="../../src/images/pic3.jpg" alt="Northern Lights" width="600" height="400">
@@ -143,6 +165,9 @@
                     <p><span>DISCOUNT</span> ON SERVICES</p>
                     <div class="desc">Add a description of the image here, Add a description of the image hereAdd a
                         description of the image here</div>
+                </div>
+                <div class="hr">
+                    <hr>
                 </div>
             </div>
 
@@ -155,6 +180,9 @@
             <a href="#" class="fa fa-telegram"></a>
             <a href="#" class="fa fa-twitter"></a>
             <a href="#" class="fa fa-whatsapp"></a>
+            <div class="tik">
+                <a href="#"><img src="../../src/images/tkicon4.png" alt="tiktok"></a>
+            </div>
         </div>
 
 
