--- a/view/about/about.css
+++ b/view/about/about.css
@@ -4,6 +4,7 @@ body {
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif; */
     font-family: 'Poppins', sans-serif ;
   background-color: rgb(0, 0, 0);
+  margin: 0%;
 }
 * {
   box-sizing: border-box;
@@ -80,6 +81,9 @@ body {
   margin-top: 0%;
   position: relative;
   top: 0;
+  
+  border-bottom-left-radius: 3%;
+  border-bottom-right-radius: 3%;
   /* animation: change 30s infinite ease-in-out; */
 }
 /* @keyframes change {
@@ -266,6 +270,10 @@ body {
 
 /* responsiveness */
 @media only screen and (max-width: 600px) {
+  .about .head p {
+    font-size: 30px;
+  }
+  
   .active{
     border-bottom: none;
     border-left: 10px solid var(--golden);
@@ -303,25 +311,35 @@ body {
   .backimage {
     /* height: 400px; */
     height: 450px;
+    border-bottom-left-radius: 3%;
+  border-bottom-right-radius: 3%;
   }
   
-  .about .head p{
-    font-size: 20px;
-  }
-  .para{
+
+  .para {
+    /* height: 400px; */
     width: 95%;
+    /* margin-left: 10%; */
+    /* background-color: yellow; */
+    border-left: 3px solid var(--golden);
+    border-top-left-radius: 15%;
+  
   }
-  .para p{
+  
+  .para p {
     font-size: 100%;
+    color: white;
+    /* width: 80%; */
+    margin-left: 8%;
+    margin-top: 5%;
+  
+    
   }
 
-  /*
   .footer {
-    margin-top: 2%;
-    padding-left: 1%;
-    width: 338px;
-    height: 600px;
-  } */
+    border-top-left-radius: 3%;
+    border-top-right-radius: 3%;
+  }
 
   .row{
     display: grid;
