--- a/view/gallerypage/galerrypage.css
+++ b/view/gallerypage/galerrypage.css
@@ -5,6 +5,7 @@ body {
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif; */
   font-family: "Poppins", sans-serif;
   background-color: rgb(0, 0, 0);
+  margin: 0%;
 }
 * {
   box-sizing: border-box;
@@ -28,11 +29,11 @@ body {
   float: left;
   width: 60%;
   list-style-type: none;
-  margin-top: 2%;
+  margin-top: 1%;
 }
 .subtop li {
   float: right;
-  /* display: inline; */
+  display: inline;
   margin-top: 3%;
   margin-right: 2%;
 }
@@ -299,6 +300,12 @@ body {
   }
   .backimage {
     height: 450px;
+    border-bottom-left-radius: 3%;
+  border-bottom-right-radius: 3%;
+  }
+  .footer {
+    border-top-left-radius: 3%;
+    border-top-right-radius: 3%;
   }
   .column {
     -ms-flex: 100%;
