--- a/view/homepage/homestyle.css
+++ b/view/homepage/homestyle.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;700&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;700&display=swap");
 
 body {
   /* font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif; */
-    font-family: 'Poppins', sans-serif ;
+  font-family: "Poppins", sans-serif;
   background-color: rgb(0, 0, 0);
+  margin: 0%;
 }
 * {
   box-sizing: border-box;
@@ -13,7 +13,7 @@ body {
 :root {
   --golden: rgb(230, 212, 14);
 }
-.active{
+.active {
   border-bottom: 3px solid var(--golden);
   padding-bottom: 3px;
 }
@@ -76,11 +76,15 @@ body {
 }
 
 .backimage {
+  background-size: cover;
+  background-repeat: no-repeat;
   height: 750px;
+  /* background-position: center center; */
+  /* height: 100vh; */
+  width: 100%;
   background-image: url(../../src/images/pic5.jpg);
-  margin-top: 0%;
+
   position: relative;
-  top: 0;
   animation: change 30s infinite ease-in-out;
   background-size: 100% 100%;
 }
@@ -105,12 +109,12 @@ body {
   }
 }
 
- .hidden{
+.hidden {
   opacity: 0;
   transition: all 1s;
   filter: blur(5px);
   transform: translateX(-100%);
-} 
+}
 /* .anime{
   opacity: 0; 
   transition: all 2s;
@@ -123,7 +127,7 @@ body {
 .anime:nth-child(3){
   transition-delay: 400ms;
 } */
-.show{
+.show {
   opacity: 1;
   filter: blur(0);
   transform: translateX(0);
@@ -133,19 +137,14 @@ body {
   display: grid;
   place-items: center;
   align-content: center;
-  
 }
-
-
 
 .head {
   /* background-color: yellow; */
-
-
 }
 
 .services .head p {
-  font-size:40px;
+  font-size: 40px;
   text-align: center;
   color: white;
 }
@@ -158,7 +157,6 @@ body {
   /* padding-left: 5%; */
   width: 97%;
   /* background-color: orange;  */
-  
 }
 .servicesgallery span {
   color: var(--golden);
@@ -255,8 +253,6 @@ body {
   color: white;
   border-left: 3px solid var(--golden);
   border-top-left-radius: 20%;
-
-
 }
 /* Clear floats after the columns */
 .servicesgallery:after {
@@ -273,7 +269,6 @@ body {
 .offersgallery {
   /* padding-left: 5%; */
   width: 97%;
- 
 }
 /* Clear floats after the columns */
 .offersgallery:after {
@@ -392,10 +387,9 @@ body {
   border-left: 3px solid var(--golden);
   border-top-left-radius: 20%;
 }
-.hr{
+.hr {
   display: none;
 }
-
 
 /* footer starts here */
 
@@ -411,20 +405,20 @@ body {
   place-items: center;
 }
 
-.row  h3 {
+.row h3 {
   color: var(--golden);
   text-align: center;
 }
-.row  p {
+.row p {
   font-size: 120%;
 }
-.row{
+.row {
   /* background-color: purple; */
   width: 98%;
 }
 
 /* Create three equal columns that floats next to each other */
- .column1 {
+.column1 {
   float: left;
   width: 32%;
   /* background-color: red; */
@@ -432,7 +426,6 @@ body {
   /* margin-right: 2%; */
   display: grid;
   place-items: center;
-  
 }
 .column2 {
   float: left;
@@ -471,16 +464,16 @@ body {
   border-radius: 50%;
 }
 
-.socialicons{
+.socialicons {
   /* background-color: green; */
 }
-.tik{
+.tik {
   /* background-color: blue; */
   float: left;
   margin-right: 4px;
   margin-top: 5px;
 }
-.socialicons img{
+.socialicons img {
   font-size: 25px;
   height: 25px;
   background-color: var(--golden);
@@ -519,20 +512,17 @@ body {
 }
 /* responsiveness */
 
-
-
 @media only screen and (max-width: 600px) {
-  .active{
+  .active {
     border-bottom: none;
     border-left: 10px solid var(--golden);
     padding-bottom: 3px;
     border-radius: 50%;
-    
   }
-  .hidden{
+  .hidden {
     transition: none;
   }
-   .subtop {
+  .subtop {
     float: left;
     width: 40%;
     list-style-type: none;
@@ -551,7 +541,6 @@ body {
     color: white;
     padding: 8px 16px;
     text-decoration: none;
-    
   }
   .topnav ul > li {
     transform: rotate(-180deg);
@@ -562,55 +551,55 @@ body {
   .backimage {
     /* height: 400px; */
     height: 450px;
-  background-image: url(../../src/images/pic5.jpg);
-  margin-top: 0%;
-  position: relative;
-  top: 0;
-  animation: change 30s infinite ease-in-out;
-  background-size: 100% 100%;
+    background-image: url(../../src/images/pic5.jpg);
+    margin-top: 0%;
+    position: relative;
+    top: 0;
+    animation: change 30s infinite ease-in-out;
+    background-size: 100% 100%;
+    border-bottom-left-radius: 3%;
+    border-bottom-right-radius: 3%;
+    /* background: no-repeat ; */
   }
-  .hr{
+  .hr {
     display: block;
     width: 85.33%;
     /* background-color: red; */
     margin-top: 2%;
     margin-bottom: 2%;
   }
-  .hr hr{
-    
+  .hr hr {
     width: 50%;
   }
-  
+
   /* .footer {
   
   }  */
-  
+
   .services .head p {
-    font-size:30px;
-    
+    font-size: 30px;
   }
   .servicesgallery {
     display: grid;
     place-items: center;
-
   }
-  
-  .servicesgallery .servigallery1{
+
+  .servicesgallery .servigallery1 {
     width: 85.33%;
-    margin-right:0%;
+    margin-right: 0%;
     padding: 0%;
     border: none;
   }
-  .servicesgallery   .servigallery1 p{
+  .servicesgallery .servigallery1 p {
     font-size: 20px;
   }
-  .servicesgallery   .servigallery2 p{
+  .servicesgallery .servigallery2 p {
     font-size: 20px;
   }
-  .servicesgallery   .servigallery3 p{
+  .servicesgallery .servigallery3 p {
     font-size: 20px;
   }
-  
+
   .servicesgallery .servigallery1:hover {
     /* border: 1px solid #777; */
     border: none;
@@ -618,12 +607,12 @@ body {
     -webkit-transform: scale(1); /* Safari 3-8 */
     transform: scale(1);
   }
-  .servicesgallery .servigallery2{
+  .servicesgallery .servigallery2 {
     width: 85.33%;
-    margin-right:0%;
+    margin-right: 0%;
     padding: 0%;
   }
-  
+
   .servicesgallery .servigallery2:hover {
     /* border: 1px solid #777; */
     border: none;
@@ -631,9 +620,9 @@ body {
     -webkit-transform: scale(1); /* Safari 3-8 */
     transform: scale(1);
   }
-  .servicesgallery .servigallery3{
+  .servicesgallery .servigallery3 {
     width: 85.33%;
-    margin-right:0%;
+    margin-right: 0%;
     padding: 0%;
   }
   .servicesgallery .servigallery3:hover {
@@ -644,25 +633,24 @@ body {
     transform: scale(1);
   }
   .offers .head p {
-    font-size:30px;
-    
+    font-size: 30px;
   }
-  .offersgallery{
+  .offersgallery {
     display: grid;
     place-items: center;
   }
-  .offersgallery .offgallery1{
+  .offersgallery .offgallery1 {
     width: 85.33%;
-    margin-right:0%;
+    margin-right: 0%;
     padding: 0%;
   }
-  .offersgallery .offgallery1 p{
+  .offersgallery .offgallery1 p {
     font-size: 20px;
   }
-  .offersgallery .offgallery2 p{
+  .offersgallery .offgallery2 p {
     font-size: 20px;
   }
-  .offersgallery .offgallery3 p{
+  .offersgallery .offgallery3 p {
     font-size: 20px;
   }
   .offersgallery .offgallery1:hover {
@@ -672,9 +660,9 @@ body {
     -webkit-transform: scale(1); /* Safari 3-8 */
     transform: scale(1);
   }
-  .offersgallery .offgallery2{
+  .offersgallery .offgallery2 {
     width: 85.33%;
-    margin-right:0%;
+    margin-right: 0%;
     padding: 0%;
   }
   .offersgallery .offgallery2:hover {
@@ -684,9 +672,9 @@ body {
     -webkit-transform: scale(1); /* Safari 3-8 */
     transform: scale(1);
   }
-  .offersgallery .offgallery3{
+  .offersgallery .offgallery3 {
     width: 85.33%;
-    margin-right:0%;
+    margin-right: 0%;
     padding: 0%;
   }
   .offersgallery .offgallery3:hover {
@@ -696,10 +684,14 @@ body {
     -webkit-transform: scale(1); /* Safari 3-8 */
     transform: scale(1);
   }
-  .row{
-  display: grid;
-  place-items: center;
-  align-content: center;
+  .footer {
+    border-top-left-radius: 3%;
+    border-top-right-radius: 3%;
+  }
+  .row {
+    display: grid;
+    place-items: center;
+    align-content: center;
   }
   .column1 {
     width: 90%;
@@ -714,10 +706,7 @@ body {
     /* padding: 10px; */
     font-size: 25px;
     width: 50px;
-   
   }
-  
-
 }
 /* Small devices (portrait tablets and large phones, 600px and up) */
 /* @media only screen and (min-width: 600px) {
