--- a/view/servicepage/service.css
+++ b/view/servicepage/service.css
@@ -5,6 +5,7 @@ body {
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif; */
     font-family: 'Poppins', sans-serif ;
   background-color: rgb(0, 0, 0);
+  margin: 0%;
 }
 * {
   box-sizing: border-box;
@@ -29,11 +30,11 @@ body {
   float: left;
   width: 60%;
   list-style-type: none;
-  margin-top: 2%;
+  margin-top: 1%;
 }
 .subtop li {
   float: right;
-  /* display: inline; */
+  display: inline;
   margin-top: 3%;
   margin-right: 2%;
 }
@@ -659,7 +660,7 @@ body {
     float: left;
     width: 40%;
     list-style-type: none;
-    margin-top: 2%;
+    margin-top: 0%;
     transform: rotate(180deg);
   }
   .subtop li {
@@ -691,6 +692,8 @@ body {
   top: 0;
   animation: change 30s infinite ease-in-out;
   background-size: 100% 100%;
+  border-bottom-left-radius: 3%;
+  border-bottom-right-radius: 3%;
   }
   .hr{
     display: block;
@@ -703,9 +706,10 @@ body {
     
     width: 50%;
   }
-  /* .footer {
-  
-  }  */
+  .footer {
+    border-top-left-radius: 3%;
+    border-top-right-radius: 3%;
+  }
   .services .head p {
     font-size:30px;
     
