--- a/view/about/about.css
+++ b/view/about/about.css
@@ -82,8 +82,8 @@ body {
   position: relative;
   top: 0;
   
-  border-bottom-left-radius: 3%;
-  border-bottom-right-radius: 3%;
+  /* border-bottom-left-radius: 3%; */
+  /* border-bottom-right-radius: 3%; */
   /* animation: change 30s infinite ease-in-out; */
 }
 /* @keyframes change {
@@ -268,6 +268,29 @@ body {
   color: var(--golden);
 }
 
+@media only screen and (max-width: 1253px) {
+  .subtop{
+    /* background-color: #111; */
+    width: 100%;
+    padding-right: 10%;
+    padding-left: 0%;
+  }
+  .subtop li{
+    /* background-color: purple; */
+    width: 17%;
+    margin-right: 1%;
+
+  }
+  .subtop li a{
+    font-size: 20px;
+    width: 20%;
+
+  }
+  .logo {
+    margin-left: 10%;
+  }
+}
+
 /* responsiveness */
 @media only screen and (max-width: 600px) {
   .about .head p {
@@ -283,17 +306,19 @@ body {
   }
    .subtop {
     float: left;
-    width: 40%;
+    width: 70%;
     list-style-type: none;
     margin-top: 2%;
     transform: rotate(180deg);
+    padding-right: 0%;
   }
   .subtop li {
     float: right;
     display: inline;
     margin-top: 3%;
-    margin-right: 22%;
+    margin-right: 2%;
     margin-left: 0%;
+    width: 70%;
   }
   .subtop li a {
     display: block;
