--- a/view/about/about.css
+++ b/view/about/about.css
@@ -334,7 +334,10 @@ body {
     margin-left: 2%;
   }
   .backimage {
+    background-image: url(../../src/images/pic5.jpg);
     /* height: 400px; */
+    background-size: 100% 100%;
+    position: relative;
     height: 450px;
     border-bottom-left-radius: 3%;
   border-bottom-right-radius: 3%;
