--- a/view/gallerypage/galerrypage.css
+++ b/view/gallerypage/galerrypage.css
@@ -325,7 +325,10 @@ body {
     margin-left: 2%;
   }
   .backimage {
+    background-image: url(../../src/images/pic5.jpg);
     height: 450px;
+    position: relative;
+    background-size: 100% 100%;
     border-bottom-left-radius: 3%;
   border-bottom-right-radius: 3%;
   }
